apps/cert-manager-extra/networkpolicy-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: cert-manager
  policyTypes:
    - Egress
  egress:
      # To Let's Encrypt
    - ports:
      - port: 443
        protocol: TCP
        # To public DNS servers (DNS-01 challenge)
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
        # To ACME endpoints (HTTP-01 challenge)
      - port: 80
        protocol: TCP
